--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -60,7 +60,7 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/images/RunWithCoach.png
+    - assets/images/SyncRun.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
