--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -61,6 +61,7 @@ flutter:
 
   assets:
     - assets/images/SyncRun.png
+    - assets/images/urosTrci.jpeg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
