--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   http: ^1.3.0
   flutter_riverpod: ^2.6.1
   flutter_secure_storage: ^9.2.4
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
