--- a/flutter-mobile/pubspec.yaml
+++ b/flutter-mobile/pubspec.yaml
@@ -34,7 +34,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_local_notifications: ^17.0.0
+  timezone: ^0.9.2
+  collection: ^1.17.2
   http: ^1.3.0
+  go_router: ^13.2.0
   flutter_riverpod: ^2.6.1
   flutter_secure_storage: ^9.2.4
   intl: ^0.18.1
